# repology-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-run.sh  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
examples/: demo_client.py
src/repology_mcp/: __init__.py  client.py  models.py  server.py
tests/: conftest.py  test_client.py  test_integration.py  test_models.py  test_server.py
