[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repology-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Repology API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tom Schoonjans", email = "Tom.Schoonjans@diamond.ac.uk" }
]
license = { text = "MIT" }
keywords = ["mcp", "repology", "packages", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
repology-mcp-server = "repology_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repology_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=repology_mcp --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests that contact real services (deselect with '-m \"not integration\"')"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.13.0",
]
